--- a/today-classes-node/sample.env
+++ b/today-classes-node/sample.env
@@ -3,5 +3,7 @@ ETHOS_INTEGRATION_URL=https://integrate.elluciancloud.com
 JWT_SECRET=your-experience-extension-shared-secret
 EXTENSION_API_TOKEN=your-experience-extension-api-token
 
+PORT=3001
+
 # turn on debug logging
 DEBUG=true
