--- a/today-classes-node/package.json
+++ b/today-classes-node/package.json
@@ -11,12 +11,9 @@
   "dependencies": {
     "@ellucian/experience-extension-server-util": "github:ellucian-developer/experience-extension-server-util.git#1.0.1",
     "@middy/core": "^2.5.1",
-    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-jwt": "^6.1.0",
-    "got": "^11.8.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
