Enhancements from reviews Ethos API Key changed to type password Hardened Today Classes data in extension Support instruction-events versions 8 and 11 for both lambda GraphQL and node EEDM
Change example lazy load to be the shared TodayClasses

add EXPERIENCE_EXTENSION_ENABLED to extension sample.env

Refactored card types to separate folders

use npx rather than assuming PATH includes ./node_modules/.bin

Improved caching feature

fix class time issue

Update to SDK 4.1.1 (#1)

Changed extension publisher to be blank - requires being set before upload

Handle data load error better

Update versions to 1.0.2

--- a/today-classes-extension/sample.env
+++ b/today-classes-extension/sample.env
@@ -1,3 +1,5 @@
 # You can rename this file to .env, and run `npx experience-extension upload` to package and upload your extension to Experience
 
 EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
+
+EXPERIENCE_EXTENSION_ENABLED=true
