--- a/today-classes-extension/package.json
+++ b/today-classes-extension/package.json
@@ -1,36 +1,34 @@
 {
   "name": "today-classes-extension",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Description of today-classes-extension",
   "main": "index.js",
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
-    "build-dev": "webpack --progress --mode development --env verbose",
-    "build-prod": "webpack --progress --mode production --env verbose",
-    "deploy-dev": "webpack --progress --mode development --env verbose --env upload",
-    "deploy-prod": "webpack --progress --mode production --env verbose --env upload",
-    "watch-and-upload": "webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
-    "start": "webpack serve --mode development --env verbose --env liveReload",
+    "build-dev": "npx webpack --progress --mode development --env verbose",
+    "build-prod": "npx webpack --progress --mode production --env verbose",
+    "deploy-dev": "npx webpack --progress --mode development --env verbose --env upload",
+    "deploy-prod": "npx webpack --progress --mode production --env verbose --env upload",
+    "watch-and-upload": "npx webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "start": "npx webpack serve --mode development --env verbose --env liveReload",
     "test": "cross-env BABEL_ENV=test JEST_JUNIT_OUTPUT=./report.xml jest --coverage"
   },
   "dependencies": {
-    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/5.1.0/umd/path_design_system_icons.tgz",
+    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/5.4.1/umd/path_design_system_icons.tgz",
     "@ellucian/experience-extension-hooks": "github:ellucian-developer/experience-extension-hooks#1.0.6",
-    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/5.1.0/umd/path_design_system.tgz",
+    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/5.4.1/umd/path_design_system.tgz",
     "chart.js": "^3.1.0",
     "classnames": "^2.2.6",
-    "dotenv-webpack": "^7.0.3",
-    "jwt-decode": "^3.1.2",
+    "jwt-decode": "3.1.2",
     "lodash": "^4.17.21",
-    "moment": "2.25.3",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-chartjs-2": "^3.0.4",
     "react-custom-events": "^1.0.3",
     "react-dom": "16.9.0",
-    "react-intl": "2.8.0",
+    "react-intl": "5.12.5",
     "react-resize-detector": "^6.7.6",
     "react-router-dom": "5.2.0",
     "string-template": "^1.0.0",
@@ -41,11 +39,12 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
-    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/3.2.1/ellucian-experience-extension-3.2.1.tgz",
+    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/4.1.1/ellucian-experience-extension-4.1.1.tgz",
     "babel-eslint": "10.1.0",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
+    "dotenv-webpack": "^7.0.3",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "eslint": "7.12.1",
@@ -63,7 +62,7 @@
     "react-test-renderer": "16.9.0",
     "rewiremock": "3.14.3",
     "webpack": "5.4.0",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-cli": "4.9.0",
+    "webpack-dev-server": "^4.4.0"
   }
 }
