--- a/today-classes-extension/package.json
+++ b/today-classes-extension/package.json
@@ -7,12 +7,12 @@
   "private": true,
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
-    "build-dev": "webpack --progress --mode development --env verbose",
-    "build-prod": "webpack --progress --mode production --env verbose",
-    "deploy-dev": "webpack --progress --mode development --env verbose --env upload",
-    "deploy-prod": "webpack --progress --mode production --env verbose --env upload",
-    "watch-and-upload": "webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
-    "start": "webpack serve --mode development --env verbose --env liveReload",
+    "build-dev": "npx webpack --progress --mode development --env verbose",
+    "build-prod": "npx webpack --progress --mode production --env verbose",
+    "deploy-dev": "npx webpack --progress --mode development --env verbose --env upload",
+    "deploy-prod": "npx webpack --progress --mode production --env verbose --env upload",
+    "watch-and-upload": "npx webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "start": "npx webpack serve --mode development --env verbose --env liveReload",
     "test": "cross-env BABEL_ENV=test JEST_JUNIT_OUTPUT=./report.xml jest --coverage"
   },
   "dependencies": {
