Add a No Classes view
Also use loglevel to manage logging levels

--- a/today-classes-lambda/sample.env
+++ b/today-classes-lambda/sample.env
@@ -11,4 +11,5 @@ ETHOS_INTEGRATION_URL=https://integrate.elluciancloud.com
 JWT_SECRET=your-experience-extension-shared-secret
 EXTENSION_API_TOKEN=your-experience-extension-api-token
 
-DEBUG=true
+# Optional to use LOG_LEVEL to specify the loglevel to use for logging
+#LOG_LEVEL=debug
