--- a/today-classes-node/sample.env
+++ b/today-classes-node/sample.env
@@ -5,5 +5,5 @@ EXTENSION_API_TOKEN=your-experience-extension-api-token
 
 PORT=3001
 
-# turn on debug logging
-DEBUG=true
+# Optional to use LOG_LEVEL to specify the loglevel to use for logging
+#LOG_LEVEL=debug
