--- a/today-classes-extension/package.json
+++ b/today-classes-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "today-classes-extension",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Description of today-classes-extension",
   "main": "index.js",
   "license": "Apache-2.0",
@@ -23,6 +23,7 @@
     "classnames": "^2.2.6",
     "jwt-decode": "3.1.2",
     "lodash": "^4.17.21",
+    "loglevel": "^1.8.0",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-chartjs-2": "^3.0.4",
