--- a/today-classes-extension/sample.env
+++ b/today-classes-extension/sample.env
@@ -3,3 +3,10 @@
 EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
 
 EXPERIENCE_EXTENSION_ENABLED=true
+
+# Optional to use LOG_LEVEL to specify the loglevel to use for logging
+#LOG_LEVEL=debug
+
+# Optional to use LOG_LEVEL_PERSIST to denote using localStorage to remember loglevel.
+# This allows the use of browser storage to persist loglevel and change the loglevel without changing the .env value.
+#LOG_LEVEL_PERSIST=true
