--- a/account-details-extension/package.json
+++ b/account-details-extension/package.json
@@ -1,9 +1,8 @@
 {
   "name": "account-details-extension",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Description of account-details-extension",
-  "main": "index.js",
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
     "build-dev": "webpack --progress --mode development --env verbose",
@@ -22,7 +21,6 @@
     "dotenv-webpack": "^7.1.0",
     "jwt-decode": "3.1.2",
     "loglevel": "^1.8.0",
-    "moment": "2.25.3",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
@@ -49,6 +47,6 @@
     "jest-junit": "12.0.0",
     "webpack": "5.4.0",
     "webpack-cli": "4.9.0",
-    "webpack-dev-server": "3.11.2"
+    "webpack-dev-server": "^4.4.0"
   }
 }
