--- a/instructor-classes-lambda/extension/package.json
+++ b/instructor-classes-lambda/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instructor-classes-extension",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "Description of instructor-classes-extension",
   "license": "Apache-2.0",
   "private": true,
@@ -51,11 +51,12 @@
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
-    "webpack": "5.69.1",
+    "webpack": "5.76.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.7.4"
   },
   "overrides": {
-    "ua-parser-js": "0.7.33"
+    "ua-parser-js": "0.7.33",
+    "webpack": "5.76.1"
   }
 }
