--- a/today-classes-graphql/extension/package.json
+++ b/today-classes-graphql/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "today-classes-graphql",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Description of today-classes-graphql",
   "license": "Apache-2.0",
   "private": true,
@@ -23,9 +23,10 @@
     "start": "webpack serve --mode development --env verbose --env liveReload"
   },
   "dependencies": {
-    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.1.1/umd/path_design_system_icons.tgz",
+    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system_icons.tgz",
     "@ellucian/experience-extension-utils": "https://cdn.elluciancloud.com/assets/SDK/utils/1.0.0/ellucian-experience-extension-utils-1.0.0.tgz",
-    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.1.1/umd/path_design_system.tgz",
+    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system.tgz",
+    "@tanstack/react-query": "^4.29.5",
     "classnames": "2.2.6",
     "dotenv-webpack": "^7.1.0",
     "jwt-decode": "3.1.2",
@@ -34,9 +35,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intl": "5.12.5",
-    "react-query": "^3.34.12",
-    "react-router-dom": "5.2.0",
-    "whatwg-fetch": "^3.6.2"
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.17.0",
@@ -44,7 +43,7 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
-    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.0.0/ellucian-experience-extension-7.0.0.tgz",
+    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.1.2/ellucian-experience-extension-7.1.2.tgz",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
@@ -55,9 +54,5 @@
     "webpack": "5.76.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.7.4"
-  },
-  "overrides": {
-    "ua-parser-js": "0.7.33",
-    "webpack": "5.76.1"
   }
 }
