--- a/today-classes-node/microservice/package.json
+++ b/today-classes-node/microservice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "today-classes-node",
-  "version": "2.0.0",
+  "version": "2.0.3",
   "description": "Node server app to connect to Ethos and get today's classes",
   "type": "module",
   "license": "Apache-2.0",
@@ -22,7 +22,8 @@
     "@ellucian/experience-extension-server-util": "github:ellucian-developer/experience-extension-server-util#1.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
