--- a/account-details/extension/.eslintrc.json
+++ b/account-details/extension/.eslintrc.json
@@ -73,7 +73,7 @@
     "camelcase": "error",
     "capitalized-comments": "off",
     "class-methods-use-this": "off",
-    "comma-dangle": "error",
+    "comma-dangle": "off",
     "comma-spacing": [
       "error",
       {
