--- a/account-details-dataconnect/extension/package.json
+++ b/account-details-dataconnect/extension/package.json
@@ -24,12 +24,12 @@
   },
   "dependencies": {
     "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system_icons.tgz",
+    "@ellucian/experience-data": "file:../../../experience-data",
+    "@ellucian/experience-extension-extras": "github:ellucian-developer/experience-extension-extras",
     "@ellucian/experience-extension-utils": "https://cdn.elluciancloud.com/assets/SDK/utils/1.0.0/ellucian-experience-extension-utils-1.0.0.tgz",
     "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system.tgz",
-    "@tanstack/react-query": "^4.29.5",
     "classnames": "2.2.6",
     "dotenv-webpack": "^7.1.0",
-    "jwt-decode": "3.1.2",
     "loglevel": "^1.8.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
