--- a/account-details/extension/package.json
+++ b/account-details/extension/package.json
@@ -9,8 +9,8 @@
     "npm": ">=8.3.0"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/ellucian-developer/experience-ethos-examples",
+    "type": "git",
+    "url": "https://github.com/ellucian-developer/experience-ethos-examples",
     "directory": "account-details/extension"
   },
   "scripts": {
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system_icons.tgz",
+    "@ellucian/experience-extension-extras": "github:ellucian-developer/experience-extension-extras",
     "@ellucian/experience-extension-utils": "https://cdn.elluciancloud.com/assets/SDK/utils/1.0.0/ellucian-experience-extension-utils-1.0.0.tgz",
     "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system.tgz",
     "@tanstack/react-query": "^4.29.5",
@@ -42,6 +43,7 @@
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
+    "@babel/runtime": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
     "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.1.2/ellucian-experience-extension-7.1.2.tgz",
     "babel-plugin-rewire": "1.2.0",
