Update to use DataQueryProvider Update to SDK 7.3 Path 7.4

--- a/today-classes-graphql/extension/package.json
+++ b/today-classes-graphql/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "today-classes-graphql",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "description": "Description of today-classes-graphql",
   "license": "Apache-2.0",
   "private": true,
@@ -9,31 +9,33 @@
     "npm": ">=8.3.0"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/ellucian-developer/experience-ethos-examples",
+    "type": "git",
+    "url": "https://github.com/ellucian-developer/experience-ethos-examples",
     "directory": "today-classes-graphql/extension"
   },
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
-    "build-dev": "webpack --progress --mode development --env verbose",
-    "build-prod": "webpack --progress --mode production --env verbose",
-    "deploy-dev": "webpack --progress --mode development --env verbose --env upload",
-    "deploy-prod": "webpack --progress --mode production --env verbose --env upload",
-    "watch-and-upload": "webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
-    "start": "webpack serve --mode development --env verbose --env liveReload"
+    "build-dev": "npx webpack --progress --mode development --env verbose",
+    "build-prod": "npx webpack --progress --mode production --env verbose",
+    "deploy-dev": "npx webpack --progress --mode development --env verbose --env upload",
+    "deploy-dev-force": "npx webpack --progress --mode development --env verbose --env upload --env forceUpload",
+    "deploy-prod": "npx webpack --progress --mode production --env verbose --env upload",
+    "watch-and-upload": "npx webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "start": "npx webpack serve --mode development --env verbose --env liveReload"
   },
   "dependencies": {
-    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system_icons.tgz",
+    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.4.0/umd/path_design_system_icons.tgz",
+    "@ellucian/experience-extension-extras": "github:ellucian-developer/experience-extension-extras#1.0.0",
     "@ellucian/experience-extension-utils": "https://cdn.elluciancloud.com/assets/SDK/utils/1.0.0/ellucian-experience-extension-utils-1.0.0.tgz",
-    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system.tgz",
-    "@tanstack/react-query": "^4.29.5",
-    "classnames": "2.2.6",
-    "dotenv-webpack": "^7.1.0",
+    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.4.0/umd/path_design_system.tgz",
+    "@tanstack/react-query": "^4.32.0",
+    "classnames": "^2.3.2",
+    "dotenv-webpack": "^7.1.1",
     "jwt-decode": "3.1.2",
-    "loglevel": "^1.8.0",
+    "loglevel": "^1.8.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-intl": "5.12.5",
     "react-router-dom": "5.2.0"
   },
@@ -43,14 +45,14 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
-    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.1.2/ellucian-experience-extension-7.1.2.tgz",
+    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.3.0/ellucian-experience-extension-7.3.0.tgz",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
     "eslint": "8.32.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react": "^7.28.0",
     "webpack": "5.76.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.7.4"
