--- a/account-details-dataconnect/extension/package.json
+++ b/account-details-dataconnect/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "account-details-dataconnect-extension",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "description": "Description of account-details-extension",
   "license": "Apache-2.0",
   "private": true,
@@ -15,34 +15,37 @@
   },
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
-    "build-dev": "webpack --progress --mode development --env verbose",
-    "build-prod": "webpack --progress --mode production --env verbose",
-    "deploy-dev": "webpack --progress --mode development --env verbose --env upload",
-    "deploy-prod": "webpack --progress --mode production --env verbose --env upload",
-    "watch-and-upload": "webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
-    "start": "webpack serve --mode development --env verbose --env liveReload"
+    "build-dev": "npx webpack --progress --mode development --env verbose",
+    "build-prod": "npx webpack --progress --mode production --env verbose",
+    "deploy-dev": "npx webpack --progress --mode development --env verbose --env upload",
+    "deploy-dev-force": "npx webpack --progress --mode development --env verbose --env upload --env forceUpload",
+    "deploy-prod": "npx webpack --progress --mode production --env verbose --env upload",
+    "watch-and-upload": "npx webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "start": "npx webpack serve --mode development --env verbose --env liveReload"
   },
   "dependencies": {
-    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system_icons.tgz",
-    "@ellucian/experience-extension-extras": "github:ellucian-developer/experience-extension-extras",
+    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.4.0/umd/path_design_system_icons.tgz",
+    "@ellucian/experience-extension-extras": "github:ellucian-developer/experience-extension-extras#1.0.0",
     "@ellucian/experience-extension-utils": "https://cdn.elluciancloud.com/assets/SDK/utils/1.0.0/ellucian-experience-extension-utils-1.0.0.tgz",
-    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.2.1/umd/path_design_system.tgz",
-    "classnames": "2.2.6",
-    "dotenv-webpack": "^7.1.0",
-    "loglevel": "^1.8.0",
+    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.4.0/umd/path_design_system.tgz",
+    "@tanstack/react-query": "^4.32.0",
+    "classnames": "^2.3.2",
+    "dotenv-webpack": "^7.1.1",
+    "jwt-decode": "3.1.2",
+    "loglevel": "^1.8.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-intl": "5.12.5",
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.17.0",
-    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
-    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.1.2/ellucian-experience-extension-7.1.2.tgz",
+    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.3.0/ellucian-experience-extension-7.3.0.tgz",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
