--- a/emergency-contacts/extension/package.json
+++ b/emergency-contacts/extension/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "today-classes-graphql",
-  "version": "2.1.0",
-  "description": "Description of today-classes-graphql",
+  "name": "emergency-contacts-extension",
+  "version": "1.0.0",
+  "description": "Description of emergency-contacts-extension",
   "license": "Apache-2.0",
   "private": true,
   "engines": {
@@ -11,7 +11,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ellucian-developer/experience-ethos-examples",
-    "directory": "today-classes-graphql/extension"
+    "directory": "account-details-dataconnect/extension"
   },
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
@@ -24,11 +24,10 @@
     "start": "npx webpack serve --mode development --env verbose --env liveReload"
   },
   "dependencies": {
-    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.4.0/umd/path_design_system_icons.tgz",
+    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/7.6.0/umd/path_design_system_icons.tgz",
     "@ellucian/experience-extension-extras": "github:ellucian-developer/experience-extension-extras#1.0.0",
     "@ellucian/experience-extension-utils": "https://cdn.elluciancloud.com/assets/SDK/utils/1.0.0/ellucian-experience-extension-utils-1.0.0.tgz",
-    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.4.0/umd/path_design_system.tgz",
-    "@tanstack/react-query": "^4.32.0",
+    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.6.0/umd/path_design_system.tgz",
     "classnames": "^2.3.2",
     "dotenv-webpack": "^7.1.1",
     "jwt-decode": "3.1.2",
@@ -45,7 +44,7 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
-    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.3.0/ellucian-experience-extension-7.3.0.tgz",
+    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/7.5.0/ellucian-experience-extension-7.5.0.tgz",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
@@ -53,6 +52,7 @@
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "webpack": "5.76.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.7.4"
