Update readme and sample.env to include PIPELINE_GET_ACCOUNT_DETAILS

--- a/account-details-dataconnect/extension/sample.env
+++ b/account-details-dataconnect/extension/sample.env
@@ -8,3 +8,5 @@ EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
 # EXPERIENCE_EXTENSION_SHARED_SECRET=<shared-secret>
 # EXPERIENCE_EXTENSION_ENABLED=<true/false>
 # EXPERIENCE_EXTENSION_ENVIRONMENTS=<Tenant1,Tenant2> 
+
+PIPELINE_GET_ACCOUNT_DETAILS=<tenant-alias>-account-details
