--- a/api-dashboard/extension/package.json
+++ b/api-dashboard/extension/package.json
@@ -1,11 +1,11 @@
 {
   "name": "api-dashboard-extension",
-  "version": "2.2.0",
+  "version": "2.2.2",
   "description": "Description of api-dashboard-extension",
   "license": "Apache-2.0",
   "private": true,
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0 <21"
   },
   "repository": {
     "type" : "git",
@@ -34,7 +34,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-chartjs-2": "^3.3.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-intl": "5.12.5",
     "react-resize-detector": "^6.7.8"
   },
