--- a/instructor-classes-lambda/extension/package.json
+++ b/instructor-classes-lambda/extension/package.json
@@ -1,11 +1,11 @@
 {
   "name": "instructor-classes-extension",
-  "version": "2.2.0",
+  "version": "2.2.2",
   "description": "Description of instructor-classes-extension",
   "license": "Apache-2.0",
   "private": true,
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0 <21"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "loglevel": "^1.8.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-intl": "5.12.5"
   },
   "devDependencies": {
